base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  labels:
    app: helloworld
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"http":"helloworld-service"}}'
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
